Try to fix spacing

--- a/css/theme.css
+++ b/css/theme.css
@@ -100,7 +100,7 @@ a:hover {
 
 .title {
 
-    width: 34ch;
+    width: 30ch;
 
 }
 
